aligned fixed nav to grid

--- a/_sass/_base/_grid.scss
+++ b/_sass/_base/_grid.scss
@@ -53,11 +53,10 @@ $reflex-cell-spacing-lg:    ($reflex-grid-spacing * 2);
   margin: 0 auto;
 
   @include breakpoint(xs) {
-    // max-width: calc(100% - 50px);
+    width: 90%;
   }
 
   @include breakpoint(md) {
-    // max-width: calc(100% - 160px);
     max-width: 1560px;
   }
 }
