--- a/_sass/_modules/_navigation.scss
+++ b/_sass/_modules/_navigation.scss
@@ -7,45 +7,45 @@ $max-width: 1560px;
 .site-title {
   position: fixed;
   top: $outer-padding;
-  left: #{(100% - $container-width-lg) / 2};
+  left: 10px;
   z-index: 9999;
   color: $dark-color;
   font-weight: 700;
   text-decoration: none;
   font-size: 14px;
-  margin-left: 1rem;
 
-  // @include breakpoint($max-width) {
-  //   left: calc((100vw - 1560px) / 2);
-  // }
+  @include breakpoint(xs) {
+    left: #{(100% - $container-width-lg) / 2};
+    margin-left: 1rem;
+  }
 }
 
 .site-byline {
   transform: rotate(90deg);
   transform-origin: right top;
   position: fixed;
-  right: #{(100% - $container-width-lg) / 2};
+  right: 10px;
   bottom: $outer-padding;
   z-index: 9999;
   color: $dark-color;
   font-weight: 700;
   font-size: 14px;
-  margin-right: 1rem;
 
-  // @include breakpoint($max-width) {
-  //   right: calc((100vw - 1560px) / 2);
-  // }
+
+  @include breakpoint(xs) {
+    right: #{(100% - $container-width-lg) / 2};
+    margin-right: 1rem;
+  }
 }
 
 .menu-btn {
   border: none;
   position: fixed;
   top: $outer-padding;
-  right: #{(100% - $container-width-lg) / 2};
+  right: 10px;
   z-index: 9999;
   padding: 0;
   background: none;
-  margin: 0 1rem 0 0;
   padding: 0;
   font-size: 0;
   appearance: none;
@@ -53,9 +53,10 @@ $max-width: 1560px;
   border: none;
   cursor: pointer;
 
-  // @include breakpoint($max-width) {
-  //   right: calc((100vw - 1560px) / 2);
-  // }
+  @include breakpoint(xs) {
+    right: #{(100% - $container-width-lg) / 2};
+    margin-right: 1rem;
+  }
 
   &:focus {
     outline: none;
